tests/typing/bad/testfile-override-4.scala

class A { def m(x: Int) {} }
class B extends A { override def m(x: Nothing) {} }
object Main { def main(args: Array[String]) { } }
